// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateDepthRecordGqlFieldsFromRecord should generate depth one record gql fields from empty record 1`] = `{}`;

exports[`generateDepthRecordGqlFieldsFromRecord should generate depth one record gql fields from record with some fields 1`] = `
{
  "domainName": true,
  "id": true,
  "name": true,
}
`;

exports[`generateDepthRecordGqlFieldsFromRecord should generate depth zero record gql fields from record with some fields 1`] = `
{
  "id": true,
  "name": true,
}
`;
